--- a/Color Game/colorGame.css
+++ b/Color Game/colorGame.css
@@ -65,6 +65,7 @@ button {
     transition: all 0.3s;
     -webkit-transition: all 0.3;
     -moz-transition: all 0.3;
+    outline: none;
 }
 
 button:hover {
