--- a/Todo List Project/assets/css/todos.css
+++ b/Todo List Project/assets/css/todos.css
@@ -9,6 +9,17 @@ h1 {
     font-weight: normal;
 }
 
+.fa-plus {
+    float: right;
+}
+
+body {
+    background: #24C6DC;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #514A9D, #24C6DC);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #514A9D, #24C6DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
 ul {
     list-style: none;
     margin: 0;
@@ -30,6 +41,23 @@ li:nth-child(2n){
     background-color: #f7f7f7;
 }
 
+span {
+    background-color: #e74c3c;
+    height: 40px;
+    margin-right: 20px;
+    text-align: center;
+    color: white;
+    width: 0px;
+    display: inline-block;
+    transition: 0.2s linear;
+    opacity: 0;
+}
+
+li:hover span {
+    width: 40px;
+    opacity: 1.0;
+}
+
 input {
     font-size: 18px;
     color: #2980b9;
@@ -37,6 +65,7 @@ input {
     width: 100%;
     padding: 13px 13px 13px 20px;
     box-sizing: border-box;
+    border: 3px solid rgba(0, 0, 0, 0);
 }
 
 input:focus{
