--- a/Todo List Project/assets/css/todos.css
+++ b/Todo List Project/assets/css/todos.css
@@ -41,7 +41,7 @@ li:nth-child(2n){
     background-color: #f7f7f7;
 }
 
-span {
+li span {
     background-color: #e74c3c;
     height: 40px;
     margin-right: 20px;
